# lido-validator-exit-signer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.prod.yaml  docker-compose.override.yaml  docker-compose.yaml  exitsigner.py  functions.py  main.py  prestart_gencert.py  pyproject.toml  start-build-prod.sh  start-logs-prod.sh  start-prod.sh  start-simple-backup.sh  start-update-prod.sh  start.sh
.github/workflows/: build.yaml
config/: settings.py  validate.py
templates/: index.html
