[tool.poetry]
name = "exitsigner"
version = "0.1.0"
description = "Python based application to sign exit messages for the LIDO Validator Ejector"
authors = ["RockLogic GmbH exitsigner@rocklogic.at"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pyinstaller = {version = "^6.6.0", python = ">=3.8,<3.13"}
python-dotenv = "^1.0.1"
oyaml = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
