[tool.poetry]
name = "exitsigner"
version = "0.1.3"
description = "Python based application to sign exit messages for the LIDO Validator Ejector"
authors = ["RockLogic GmbH exitsigner@rocklogic.at"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pyinstaller = {version = "^6.6.0", python = ">=3.8,<3.13"}
python-dotenv = "^1.0.1"
oyaml = "^1.0"
validators = "^0.28.3"
semver = "^3.0.2"
toml = "^0.10.2"
flask = "^3.0.3"
loguru = "^0.7.2"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
asgiref = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
